--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -9,10 +9,10 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org1
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/0e729224e8b3f31784c8a93c5b8ef6f4c1c91d9e6e577c45c33163609fe40011_sk
+      #- FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/0e729224e8b3f31784c8a93c5b8ef6f4c1c91d9e6e577c45c33163609fe40011_sk
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/0e729224e8b3f31784c8a93c5b8ef6f4c1c91d9e6e577c45c33163609fe40011_sk
+      #- FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org1.example.com-cert.pem
+      #- FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/0e729224e8b3f31784c8a93c5b8ef6f4c1c91d9e6e577c45c33163609fe40011_sk
     ports:
       - "7054:7054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
@@ -26,10 +26,10 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org2
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
+      #- FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
+      #- FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org2.example.com-cert.pem
+      #- FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
     ports:
       - "8054:7054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
@@ -43,7 +43,7 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org3
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.example.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
+      #- FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       #NOTE: Filip: we don't have this generated should check what this is used for. This does not exist on the test_network
       #- FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.example.com-cert.pem
@@ -61,7 +61,7 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org4
       - FABRIC_CA_SERVER_CA_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org4.example.com-cert.pem
-      - FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
+      #- FABRIC_CA_SERVER_CA_KEYFILE=/etc/hyperledger/fabric-ca-server-config/a7d47efa46a6ba07730c850fed2c1375df27360d7227f48cdc2f80e505678005_sk
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       #NOTE: Filip: we don't have this generated should check what this is used for. These env do not exist on the test_network
       #- FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.org3.example.com-cert.pem
@@ -86,7 +86,7 @@ services:
       - ORDERER_GENERAL_TLS_ENABLED=true
       - ORDERER_GENERAL_TLS_PRIVATEKEY=/etc/hyperledger/crypto/orderer/tls/server.key
       - ORDERER_GENERAL_TLS_CERTIFICATE=/etc/hyperledger/crypto/orderer/tls/server.crt
-      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/crypto/orderer/tls/ca.crt, /etc/hyperledger/crypto/peerOrg1/tls/ca.crt, /etc/hyperledger/crypto/peerOrg2/tls/ca.crt]
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/etc/hyperledger/crypto/orderer/tls/ca.crt, /etc/hyperledger/crypto/peerOrg1/tls/ca.crt, /etc/hyperledger/crypto/peerOrg2/tls/ca.crt, /etc/hyperledger/crypto/peerOrg3/tls/ca.crt, /etc/hyperledger/crypto/peerOrg4/tls/ca.crt]
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/orderers
     command: orderer
     ports:
@@ -96,6 +96,8 @@ services:
         - ./channel/crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/:/etc/hyperledger/crypto/orderer
         - ./channel/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/:/etc/hyperledger/crypto/peerOrg1
         - ./channel/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/:/etc/hyperledger/crypto/peerOrg2
+        - ./channel/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/:/etc/hyperledger/crypto/peerOrg3
+        - ./channel/crypto-config/peerOrganizations/org4.example.com/peers/peer0.org4.example.com/:/etc/hyperledger/crypto/peerOrg4
 
   peer0.org1.example.com:
     container_name: peer0.org1.example.com
@@ -106,7 +108,7 @@ services:
       - CORE_PEER_ID=peer0.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer0.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org1.example.com:7051,peer2.org1.example.com:7051,peer3.org1.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org1.example.com:7051
     ports:
       - 7051:7051
@@ -125,7 +127,7 @@ services:
       - CORE_PEER_ID=peer1.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer1.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051,peer2.org1.example.com:7051,peer3.org1.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org1.example.com:7051
     ports:
       - 7056:7051
@@ -144,7 +146,7 @@ services:
       - CORE_PEER_ID=peer2.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer2.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051,peer1.org1.example.com:7051,peer2.org1.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org1.example.com:7051
     ports:
       - 7059:7051
@@ -163,7 +165,7 @@ services:
       - CORE_PEER_ID=peer3.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer3.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051,peer1.org1.example.com:7051,peer2.org1.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.org1.example.com:7051
     ports:
       - 7061:7051
@@ -182,7 +184,7 @@ services:
       - CORE_PEER_ID=peer0.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer0.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org2.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org2.example.com:7051,peer2.org2.example.com:7051,peer3.org2.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org2.example.com:7051
     ports:
       - 8051:7051
@@ -201,7 +203,7 @@ services:
       - CORE_PEER_ID=peer1.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer1.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051,peer2.org2.example.com:7051,peer3.org2.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org2.example.com:7051
     ports:
       - 8056:7051
@@ -220,7 +222,7 @@ services:
       - CORE_PEER_ID=peer2.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer2.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051,peer1.org2.example.com:7051,peer3.org2.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org2.example.com:7051
     ports:
       - 8059:7051
@@ -239,7 +241,7 @@ services:
       - CORE_PEER_ID=peer3.org2.example.com
       - CORE_PEER_LOCALMSPID=Org2MSP
       - CORE_PEER_ADDRESS=peer3.org2.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org2.example.com:7051,peer1.org2.example.com:7051,peer2.org2.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.org2.example.com:7051
     ports:
       - 8061:7051
@@ -258,7 +260,7 @@ services:
       - CORE_PEER_ID=peer0.org3.example.com
       - CORE_PEER_LOCALMSPID=Org3MSP
       - CORE_PEER_ADDRESS=peer0.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org3.example.com:7051,peer2.org3.example.com:7051,peer3.org3.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org3.example.com:7051
     ports:
       - 9051:7051
@@ -277,7 +279,7 @@ services:
       - CORE_PEER_ID=peer1.org3.example.com
       - CORE_PEER_LOCALMSPID=Org3MSP
       - CORE_PEER_ADDRESS=peer1.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051,peer2.org3.example.com:7051,peer3.org3.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org3.example.com:7051
     ports:
       - 9056:7051
@@ -296,7 +298,7 @@ services:
       - CORE_PEER_ID=peer2.org3.example.com
       - CORE_PEER_LOCALMSPID=Org3MSP
       - CORE_PEER_ADDRESS=peer2.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051,peer1.org3.example.com:7051,peer3.org3.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org3.example.com:7051
     ports:
       - 9059:7051
@@ -315,7 +317,7 @@ services:
       - CORE_PEER_ID=peer3.org3.example.com
       - CORE_PEER_LOCALMSPID=Org3MSP
       - CORE_PEER_ADDRESS=peer3.org3.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org3.example.com:7051,peer1.org3.example.com:7051,peer2.org3.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.org3.example.com:7051
     ports:
       - 9061:7051
@@ -334,7 +336,7 @@ services:
       - CORE_PEER_ID=peer0.org4.example.com
       - CORE_PEER_LOCALMSPID=Org4MSP
       - CORE_PEER_ADDRESS=peer0.org4.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.org4.example.com:7051,peer2.org4.example.com:7051,peer3.org4.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.org4.example.com:7051
     ports:
       - 10051:7051
@@ -353,7 +355,7 @@ services:
       - CORE_PEER_ID=peer1.org4.example.com
       - CORE_PEER_LOCALMSPID=Org4MSP
       - CORE_PEER_ADDRESS=peer1.org4.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051,peer2.org4.example.com:7051,peer3.org4.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.org4.example.com:7051
     ports:
       - 10056:7051
@@ -372,7 +374,7 @@ services:
       - CORE_PEER_ID=peer2.org4.example.com
       - CORE_PEER_LOCALMSPID=Org4MSP
       - CORE_PEER_ADDRESS=peer2.org4.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051,peer1.org4.example.com:7051,peer3.org4.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org4.example.com:7051
     ports:
       - 10059:7051
@@ -391,7 +393,7 @@ services:
       - CORE_PEER_ID=peer3.org4.example.com
       - CORE_PEER_LOCALMSPID=Org4MSP
       - CORE_PEER_ADDRESS=peer3.org4.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org4.example.com:7051,peer1.org4.example.com:7051,peer2.org4.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.org4.example.com:7051
     ports:
       - 10061:7051
