--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -146,7 +146,7 @@ services:
       - CORE_PEER_ID=peer2.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer2.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051 peer1.org1.example.com:7051 peer3.org1.example.com:7051      
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051 #peer1.org1.example.com:7051 peer3.org1.example.com:7051      
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer2.org1.example.com:7051
     ports:
       - 7059:7051
@@ -165,7 +165,7 @@ services:
       - CORE_PEER_ID=peer3.org1.example.com
       - CORE_PEER_LOCALMSPID=Org1MSP
       - CORE_PEER_ADDRESS=peer3.org1.example.com:7051
-      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051 peer1.org1.example.com:7051 peer2.org1.example.com:7051
+      - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.org1.example.com:7051 #peer1.org1.example.com:7051 peer2.org1.example.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer3.org1.example.com:7051
     ports:
       - 7061:7051
