--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -25,7 +25,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: ./crypto-config/ordererOrganizations/example.com/msp
+        MSPDir: ./organizations/ordererOrganizations/example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -52,7 +52,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org1MSP
 
-        MSPDir: ./crypto-config/peerOrganizations/org1.example.com/msp
+        MSPDir: ./organizations/peerOrganizations/org1.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -60,7 +60,7 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org1MSP.admin', 'Org1MSP.peer', 'Org1MSP.client')"
+                Rule: "OR('Org1MSP.admin', 'Org1MSP.peer', 'Org1MSP.client', 'Org1MSP.member')"
             Writers:
                 Type: Signature
                 Rule: "OR('Org1MSP.admin', 'Org1MSP.client')"
@@ -91,7 +91,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org2MSP
 
-        MSPDir: ./crypto-config/peerOrganizations/org2.example.com/msp
+        MSPDir: ./organizations/peerOrganizations/org2.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -99,7 +99,7 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client')"
+                Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client', 'Org1MSP.member')"
             Writers:
                 Type: Signature
                 Rule: "OR('Org2MSP.admin', 'Org2MSP.client')"
@@ -130,7 +130,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org3MSP
 
-        MSPDir: ./crypto-config/peerOrganizations/org3.example.com/msp
+        MSPDir: ./organizations/peerOrganizations/org3.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -138,7 +138,7 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org3MSP.admin', 'Org3MSP.peer', 'Org3MSP.client')"
+                Rule: "OR('Org3MSP.admin', 'Org3MSP.peer', 'Org3MSP.client', 'Org1MSP.member')"
             Writers:
                 Type: Signature
                 Rule: "OR('Org3MSP.admin', 'Org3MSP.client')"
@@ -168,7 +168,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org4MSP
 
-        MSPDir: ./crypto-config/peerOrganizations/org4.example.com/msp
+        MSPDir: ./organizations/peerOrganizations/org4.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -176,7 +176,7 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org4MSP.admin', 'Org4MSP.peer', 'Org4MSP.client')"
+                Rule: "OR('Org4MSP.admin', 'Org4MSP.peer', 'Org4MSP.client', 'Org1MSP.member')"
             Writers:
                 Type: Signature
                 Rule: "OR('Org4MSP.admin', 'Org4MSP.client')"
@@ -316,8 +316,8 @@ Orderer: &OrdererDefaults
         Consenters:
         - Host: orderer.example.com
           Port: 7050
-          ClientTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-          ServerTLSCert: ./crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ClientTLSCert: ./organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ServerTLSCert: ./organizations/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
 
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
@@ -418,20 +418,7 @@ Profiles:
                     - *Org3
                     - *Org4
 
-    FourOrgsChannel1:
-        Consortium: SampleConsortium
-        <<: *ChannelDefaults
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *Org1
-                - *Org2
-                - *Org3
-                - *Org4
-            Capabilities:
-                <<: *ApplicationCapabilities
-
-    FourOrgsChannel2:
+    FourOrgsChannel:
         Consortium: SampleConsortium
         <<: *ChannelDefaults
         Application:
