--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-artifacts/channel/organizations/
-artifacts/channel/config
-*.txt
-*.tx
-*.json
-*.pb
+/bin
+/config
+bin/configtxgen
+bin/configtxlator
+bin/cryptogen
+bin/discover
+bin/fabric-ca-client
+bin/fabric-ca-server
+bin/idemixgen
+bin/orderer
+bin/peer
